--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "scrapper",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "async": "^3.2.0",
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "google-play-scraper": "^8.0.2",
-    "lodash": "^4.17.21",
-    "mongoose": "^5.12.2"
-  }
+    "name": "scrapper",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "node app.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "async": "^3.2.0",
+        "body-parser": "^1.19.0",
+        "express": "^4.17.1",
+        "google-play-scraper": "^8.0.2",
+        "lodash": "^4.17.21",
+        "mongoose": "^5.12.2"
+    }
 }
